# mind-mem

./: .cursorrules  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .run-ledger.jsonl  .windsurfrules  AGENTS.md  ANATOMY.md  AUDIT_FINDINGS_FOR_CLAUDE.md  CHANGELOG.md  CLAUDE.md  CLI_TASKS.md  CONTRIBUTING.md  Dockerfile  EVIDENCE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_2026-04.md  SPEC.md  conftest.py  demo-setup.sh  demo.tape  generate_mind7b_training.py  install-bootstrap.sh  install.sh  mcp_server.py  mind-mem.example.json  plugin.json  pyproject.toml  reproduce_bug.py  requirements-optional.txt  setup.py  train_mind7b_runpod.py  uninstall.sh
.arch-mind/: last_summary.json  rules.mind  scan.json  scan_v3813.json
.gemini/: settings.json
.github/: CODEOWNERS  FUNDING.yml  SECURITY_CONTACTS.md  copilot-instructions.md  dependabot.yml  labels.yml  mlc_config.json  pilot-issues.md  pull_request_template.md
.mind-mem-audit/: drift.db
.mind-mem-index/: recall.db
.roo/: system-prompt.md
agents/: mind-mem-expert.md
audits/: 2026-05-18-copilot-audit.md  v3.11-v3.12-corpus-final-audit-2026-05-09.json  v3.11.0-integration-consensus-2026-05-08.json  v3.12-corpus-final-audit-2026-05-09.json  v4.0.1-claude-2026-05-12.md
benchmarks/: CACHE.md  LONGMEMEVAL_FINDINGS_2026-05-19.md  NIAH.md  README_benchmark_mode.md  REPORT.md  REPORT_v1.0.1.md  _capfix_probe.py  _ch_minilm.py  _ch_minilm_spawn.py  bench_kernels.py  cache_effectiveness.py  cache_effectiveness_v3.2.1.json  compare_runs.py  crossencoder_ab.py  generate_dispatcher_examples.py  generate_retrieval_examples.py  grid_search.py  local_stack_audit.py  locomo_harness.py  locomo_judge.py  locomo_v1.1.0_mistral_large_full.json  locomo_v1.1.1_mistral_large_conv0.json  locomo_v3.3.0_benchmark_config.json  longmemeval_apples.py  longmemeval_chunk_bm25_4b.py  longmemeval_chunked.py  longmemeval_chunked_hybrid.py  longmemeval_chunked_minilm.py  longmemeval_clean.py  longmemeval_fullpotential.py  longmemeval_harness.py  longmemeval_hybrid4b.py  longmemeval_real_harness.py  longmemeval_v4.0.9_repro_20260519.json  niah_full_results.txt  niah_v3.2.1_redis_results.txt  niah_v3.2.1_results.txt  repro_niah.py  runpod_kickoff.sh  tier_weight_search.py  (+3 more)
deploy/: Makefile  docker-compose.yml
docs/: HYPEREDGE_DESIGN_2026-06-17.md  MIND_CONFIG_VS_MIND_LANG.md  SECURITY_AUDIT_SELF_2026_04.md  agent-comm.md  agent-memory-protocol.md  api-reference.md  append-only-audit-logs.md  architecture.md  audit_response.md  benchmarks.md  block-format.md  block-type-taxonomy-roadmap.md  changelog-format.md  ci-workflows.md  claude-desktop-setup.md  cli-reference.md  client-integrations.md  companion-tools.md  comparison.md  competitive-analysis-persistent-memory-2026.md  configuration.md  development.md  docker-deployment.md  faq.md  federation-setup.md  getting-started.md  glossary.md  governance.md  hf-mind-mem-4b-v2-README.md  install-guide.md  integrations.md  locomo-v3.4-conv0-results.md  maintenance-namespaces.md  mcp-integration.md  mcp-servers-pr.md  mcp-tool-examples.md  mic-map.md  migration-guide.md  migration.md  mind-kernels.md  (+44 more)
examples/: README.md  basic_usage.py  mic_map_quickstart.py
hooks/: hooks.json  session-end.sh  session-start.sh
intelligence/: BRIEFINGS.md
lib/: kernels.c
mind/: README.md  abstention.mind  adversarial.mind  answer.mind  bm25.mind  category.mind  cognitive.mind  cross_encoder.mind  ensemble.mind  evidence.mind  governance.mind  graph.mind  hybrid.mind  importance.mind  intent.mind  prefetch.mind  query_plan.mind  ranking.mind  recall.mind  rerank.mind  reranker.mind  rm3.mind  rrf.mind  session.mind  temporal.mind  trajectory.mind  truth.mind
scripts/: __init__.py  _recall_constants.py  _recall_context.py  _recall_core.py  _recall_detection.py  _recall_expansion.py  _recall_reranking.py  _recall_scoring.py  _recall_temporal.py  _recall_tokenization.py  abstention_classifier.py  anatomy-hook.sh  anatomy.sh  apply_engine.py  backup_restore.py  baseline_snapshot.py  block_metadata.py  block_parser.py  bootstrap_corpus.py  build_integrity_manifest.py  capture.py  category_distiller.py  check_claims.sh  check_version.py  compaction.py  conflict_resolver.py  contradiction_detector.py  count_mcp_tools.py  cron_runner.py  cross_encoder_reranker.py  entity_ingest.py  error_codes.py  evidence_packer.py  extractor.py  filelock.py  hybrid_recall.py  init_workspace.py  intel_scan.py  intent_router.py  llm_extractor.py  (+19 more)
security/: api-security-2026-04-28.md  api-security-review-2026-04-28.md  threat-model-2026-04-28.md
src/: mcp_server.py
templates/: AUDIT.md  BRIEFINGS.md  CONTRADICTIONS.md  DECISIONS.md  DECISIONS_PROPOSED.md  DRIFT.md  EDITS_PROPOSED.md  IMPACT.md  MEMORY.md  SCAN_LOG.md  SIGNALS.md  TASKS.md  TASKS_PROPOSED.md  incidents.md  intel-state.json  maint-state.json  people.md  projects.md  tools.md
tests/: test_abstention_classifier.py  test_active_only_filter.py  test_adversarial_corpus.py  test_agent_bridge.py  test_agent_id_filter.py  test_agent_messaging.py  test_alerting.py  test_allow_decompose.py  test_answer_quality.py  test_api_keys.py  test_apply_double_apply_guard.py  test_apply_engine.py  test_apply_engine_backend_routing.py  test_apply_engine_op_routing.py  test_atomicity_maintenance_scope.py  test_audit_chain.py  test_audit_pinned.py  test_auto_resolver.py  test_axis_recall.py  test_axis_recall_mcp.py  test_backup_restore.py  test_baseline_snapshot.py  test_bigrams.py  test_block_id_format.py  test_block_lineage.py  test_block_maturity_group_h.py  test_block_metadata.py  test_block_parser.py  test_block_parser_chunks.py  test_block_parser_edge.py  test_block_parser_fields.py  test_block_parser_multifile.py  test_block_parser_no_silent_truncation.py  test_block_store.py  test_block_store_encrypted.py  test_block_store_lock.py  test_block_store_snapshot.py  test_block_store_write.py  test_block_types.py  test_bootstrap_corpus.py  (+284 more)
train/: CORPUS_HASH_v3.11.0  CORPUS_HASH_v3.12.0-fullft  README.md  (+28 more)
(+314 files in other folders)
