[project]
name = "mind-mem"
version = "2.4.0"
description = "Drop-in memory for Claude Code, OpenClaw, and any MCP-compatible agent."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "STARGA Inc", email = "noreply@star.ga" }
]
keywords = ["memory", "ai-agent", "mind", "recall", "mcp", "claude-code", "openclaw", "hybrid-search", "rrf", "governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

# For hash-verified installs, use: pip install --require-hashes -r requirements-optional.txt
[project.optional-dependencies]
test = ["pytest>=7.4,<10.0", "pytest-cov>=6.0,<8.0", "mypy>=1.14,<2.0"]
mcp = ["fastmcp>=3.2.0"]
embeddings = ["onnxruntime==1.24.2", "tokenizers==0.22.2"]
cross-encoder = ["sentence-transformers==5.2.3"]
benchmark = ["pytest-benchmark>=4.0,<6.0"]
all = ["fastmcp>=3.2.0", "onnxruntime==1.24.2", "tokenizers==0.22.2", "sentence-transformers==5.2.3"]

[project.urls]
Homepage = "https://github.com/star-ga/mind-mem"
Repository = "https://github.com/star-ga/mind-mem"
Documentation = "https://github.com/star-ga/mind-mem#readme"
Issues = "https://github.com/star-ga/mind-mem/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
mind-mem-init = "mind_mem.init_workspace:main"
mind-mem-scan = "mind_mem.intel_scan:main"
mind-mem-recall = "mind_mem.recall:main"
mind-mem-capture = "mind_mem.capture:main"
mind-mem-validate = "mind_mem.validate_py:main"
mind-mem-mcp = "mind_mem.mcp_entry:main"
mind-mem-migrate = "mind_mem.schema_version:main"
mind-mem-backup = "mind_mem.backup_restore:main"
mind-mem-compact = "mind_mem.compaction:main"
mind-mem-resolve = "mind_mem.conflict_resolver:main"
mind-mem-baseline = "mind_mem.baseline_snapshot:_cli"
mind-mem-verify = "mind_mem.verify_cli:main"

[tool.setuptools]
packages = ["mind_mem"]
package-dir = {"" = "src"}
py-modules = ["mcp_server"]

[tool.setuptools.package-data]
mind_mem = ["py.typed", "*.mind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"mcp_server.py" = ["I001", "E402"]
"src/mind_mem/mcp_server.py" = ["I001", "E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[tool.coverage.run]
source = ["mind_mem"]
omit = ["*/tests/*", "*/benchmarks/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
