[project]
name = "mind-mem"
version = "3.6.9"
description = "Drop-in memory for Claude Code, OpenClaw, and any MCP-compatible agent."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "STARGA Inc", email = "noreply@star.ga" }
]
keywords = ["memory", "ai-agent", "mind", "recall", "mcp", "claude-code", "openclaw", "hybrid-search", "rrf", "governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

# For hash-verified installs, use: pip install --require-hashes -r requirements-optional.txt
[project.optional-dependencies]
test = [
    "pytest>=7.4,<10.0",
    "pytest-cov>=6.0,<8.0",
    "mypy>=1.14,<2.0",
    "fastmcp>=3.2.0",
    "sqlite-vec>=0.1.6",
    # Runtime optional deps that several test modules exercise directly;
    # install them in the CI matrix so the full suite runs, not a subset.
    # Ranges (not pins) because CI resolves across 3 OS x 4 Python
    # versions and the pinned versions in [all] / [embeddings] are not
    # published on every wheel combination (e.g. onnxruntime 1.24 is not
    # on PyPI as of 2026-04; max is 1.23.x).
    "onnxruntime>=1.20,<2.0",
    "tokenizers>=0.22,<1.0",
    "sentence-transformers>=5.0,<6.0",
    # v3.2.0 REST-layer tests import fastapi + python-jose directly;
    # install them in the test matrix so tests/test_rest_api.py et al.
    # don't fail collection on a fresh CI runner.
    "fastapi>=0.110,<1.0",
    "httpx>=0.27,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
]
api = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
]
postgres = ["psycopg[binary]>=3.2,<4.0", "pgvector>=0.3,<1.0"]
mcp = ["fastmcp>=3.2.0"]
embeddings = ["onnxruntime==1.24.2", "tokenizers==0.22.2"]
cross-encoder = ["sentence-transformers==5.2.3"]
benchmark = ["pytest-benchmark>=4.0,<6.0"]
otel = [
    "opentelemetry-api>=1.20,<2.0",
    "opentelemetry-sdk>=1.20,<2.0",
    "opentelemetry-exporter-otlp>=1.20,<2.0",
    "prometheus-client>=0.18,<1.0",
]
all = ["fastmcp>=3.2.0", "onnxruntime==1.24.2", "tokenizers==0.22.2", "sentence-transformers==5.2.3"]

[project.urls]
Homepage = "https://github.com/star-ga/mind-mem"
Repository = "https://github.com/star-ga/mind-mem"
Documentation = "https://github.com/star-ga/mind-mem#readme"
Issues = "https://github.com/star-ga/mind-mem/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
mind-mem-init = "mind_mem.init_workspace:main"
mind-mem-scan = "mind_mem.intel_scan:main"
mind-mem-recall = "mind_mem.recall:main"
mind-mem-capture = "mind_mem.capture:main"
mind-mem-validate = "mind_mem.validate_py:main"
mind-mem-mcp = "mind_mem.mcp_entry:main"
mind-mem-migrate = "mind_mem.schema_version:main"
mind-mem-backup = "mind_mem.backup_restore:main"
mind-mem-compact = "mind_mem.compaction:main"
mind-mem-resolve = "mind_mem.conflict_resolver:main"
mind-mem-baseline = "mind_mem.baseline_snapshot:_cli"
mind-mem-verify = "mind_mem.verify_cli:main"
mm = "mind_mem.mm_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["mcp_server"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
mind_mem = ["py.typed", "*.mind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# pytest-asyncio >=0.25 deprecates the unset default; pin to ``function``
# so warnings stay clean on CI + editable installs.
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
# Default run excludes the `stress` marker — it gates heavier
# concurrency tests that take 30-60s and can flake on shared CI
# infra. Opt in with `pytest -m stress` when you want them.
addopts = "-m 'not stress'"
markers = [
    "stress: slow concurrency/stress tests; run with `pytest -m stress`",
]
filterwarnings = [
    # Upstream SWIG bindings in transitive deps emit this during import on
    # Python 3.12+. Not fixable in mind-mem itself; silence the Python-side
    # noise so CI logs stay useful.
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute::",
]

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"mcp_server.py" = ["I001", "E402"]
"src/mind_mem/mcp_server.py" = ["I001", "E402"]
"src/mind_mem/hook_installer.py" = ["E402"]
"tests/test_niah.py" = ["E501"]
"tests/test_dedup.py" = ["E501"]
"tests/test_verify_cli.py" = ["E501"]
"tests/test_smart_chunker.py" = ["E501"]
"src/mind_mem/skill_opt/history.py" = ["E501"]
# Dev-only training scripts — long corpus / card strings and late
# imports gated on torch/accelerate availability. Not shipped in the
# wheel; not part of the production surface.
"train/*.py" = ["E501", "E402"]
"generate_mind7b_training.py" = ["E501", "E402"]
"train_mind7b_runpod.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
# The root-level mcp_server.py is a developer-checkout entrypoint that
# intentionally duplicates the module name exposed from src/ (the
# packaged wheel registers "mcp_server" under src/ via py-modules).
# When mypy is run from the repo root it otherwise emits a
# "Duplicate module named 'mcp_server'" error. Excluding the root
# shim from the whole-repo scan removes that error without affecting
# the typechecking of the packaged copy (which CI already covers
# via `mypy src/`).
#
# Dev-only directories (tests/, benchmarks/, train/, examples/) and
# the top-level training-script shims are also excluded from the
# whole-repo scan.  Their type errors are out of scope for v3.1.x
# (ML-specific overloads, test fixture duck-typing, benchmark ad-hoc
# dicts) and these files are not part of the shipped wheel.  The
# canonical type-check target in CI is `mypy src/`, which is fully
# clean.
exclude = [
    "^mcp_server\\.py$",
    "^tests/",
    "^benchmarks/",
    "^train/",
    "^examples/",
    "^generate_mind7b_training\\.py$",
    "^train_mind7b_runpod\\.py$",
]

[tool.coverage.run]
source = ["mind_mem"]
omit = ["*/tests/*", "*/benchmarks/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
